--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,36 +88,6 @@ body {
   clear: both;
 }
 
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - -  Cover Pic  - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-
-.cover-photo {
-  width:100%;
-  height: 100vh;                // Need to decide on using vh/vw ?????
-  margin:0;
-  float:left;
-  position:relative;
-  overflow:hidden;
-}
-
-.img-cover {
-  position: absolute;
-  top:0;
-  left:0;
-  margin: 0;
-  padding: 0;
-  width:100%;
-  height:100%;
-  background-color:$blue;
-  opacity: 0.7;
-  cursor:default;
-}
-
-.cover-photo-img  {
-      width:1500px;
-      // visibility:hidden;
-}
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - -  Header / Logo - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -215,7 +185,7 @@ body {
       font-size: 1rem;
       margin: 10px 0 0 0;
       padding: 0;
-      font-weight: 400;
+      font-weight: 200;
     }
   
   
@@ -452,10 +422,57 @@ body {
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - -  Cover Pic  - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+
+.hero-cover {
+  width:100%;
+  height: 100vh;                // Need to decide on using vh/vw ?????
+  margin:0;
+  float:left;
+  position:relative;
+  overflow:hidden;
+}
+
+.short-hero-cover {
+  width:100%;
+  height: 50vh;                // Need to decide on using vh/vw ?????
+  margin:0;
+  float:left;
+  position:relative;
+  overflow:hidden;
+}
+
+.img-cover , .catgeory-img-cover {
+  position: absolute;
+  top:0;
+  left:0;
+  margin: 0;
+  padding: 0;
+  width:100%;
+  height:100%;
+  opacity: 0.7;
+  cursor:default;
+}
+
+.img-cover {
+  background-color:$blue;
+}
+
+.catgeory-img-cover {
+  background-color:$blue;
+}
+
+.cover-photo-img  {
+      width:1500px;
+      // visibility:hidden;
+}
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - -  Hero Section  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
-.hero-phrase {
+.hero-title {
   position:absolute;
   cursor:default;
   text-align: center;
@@ -476,7 +493,24 @@ body {
           font-size: 2rem;
           font-weight: 200;
       }
+}
 
+.hero-phrase {
+  position:absolute;
+  cursor:default;
+  text-align: center;
+  padding:5px;
+  left:0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  top:35%;
+  color:$white;
+  
+       h1 {
+           font-size: 3rem;
+           font-weight: 200;
+      }
 }
 
 .hero-buttons{
