changing all the static pages

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -10,10 +10,10 @@
             <ul>
                   <div class="static-links">
 
-                    <li><div class="static-pages"><%= nav_link_to 'About', static_pages_about_path %></div></li>
-                    <li><div class="static-pages"><%= nav_link_to 'Help', static_pages_help_path %></div></li>
-                    <li><div class="static-pages"><%= nav_link_to 'Contact Us', static_pages_contact_us_path %></div></li>
-                    <li><div class="static-pages"><%= nav_link_to 'Copyright', static_pages_copyright_path %></div> </li>
+                    <li><div class="static-pages"><%= nav_link_to 'About', application_about_path %></div></li>
+                    <li><div class="static-pages"><%= nav_link_to 'Help', application_help_path %></div></li>
+                    <li><div class="static-pages"><%= nav_link_to 'Contact Us', application_contact_us_path %></div></li>
+                    <li><div class="static-pages"><%= nav_link_to 'Copyright', application_copyright_path %></div> </li>
                   </div>
             </ul>
         </div>  
