--- a/app/views/posts/_short_cover.html.erb
+++ b/app/views/posts/_short_cover.html.erb
@@ -2,6 +2,6 @@
                 <div class="catgeory-img-cover"></div>
                 <%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
            <div class="hero-phrase">
-              <h1><%= @category_title %> </h1>
+              <h1><%= @title %> </h1>
           </div>
 </div>
