--- a/app/views/application/_cover.html.erb
+++ b/app/views/application/_cover.html.erb
@@ -1,17 +1,16 @@
 <div class="hero-cover">
-            <% if current_page?('/') or current_page?('/posts') %>
+            <% if current_page?('/') || current_page?('/posts')%>
                 <div class="img-cover"></div>
                 <%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
                   <div class="hero-title">
-                    <h1><%= @category_title %> </h1>
-                    <h3><%= @category_slogan %> </h3>
+                    <h1><%= @title %> </h1>
+                    <h3><%= @slogan %> </h3>
                   </div>
 
                   <div class="hero-buttons center">
-                        <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
-                        <%= link_to 'Randomize' , randomize_posts_path , id: 'random-button' %>
+                        <%= link_to 'Latest Content' , posts_mostrecent_path , class: 'mostrecent-button' %>
+                        <%= link_to 'Most Liked' , posts_topvids_path , class: 'topvid-button' %>
                   </div>
-
 
                   <div class="start-watching center">Start watching now</div>
                   <div class="scroll-to-content">
@@ -26,7 +25,6 @@
                 <%= image_tag('blurred-cover-photo' ,class: 'cover-photo-img') %> 
               <% end %>
            <% end %>
-
-          
 </div>
+
 
