--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -7,7 +7,7 @@
                 <input type="text" class="search-input" name="search" placeholder="Search"></input>
           </div> 
           
-          <% if current_page?('/') or current_page?('/posts') or current_page?('/profile')%>
+          <% if current_page?('/') or current_page?('/posts') or current_page?('/profile') or current_page?('/top_videos') or current_page?('/latest') %>
               <div class="tag-container center">
                   <div class="tag-wrap">
                         <h3 class="tag-title">Tags</h3>
