--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -5,8 +5,8 @@
 				<% else %>
 					<%= image_tag("bulb-icon-1005064002.png") %><br>
 				<% end %>
-	    		<!-- <div class="vote-number">
+	    		<div class="vote-number">
 	    			<%= post.get_upvotes.size %>
-	    		</div>	  -->   		
+	    		</div>	  		
 	    	<%end%>
 	<%end%>
