--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -3,7 +3,7 @@
 	<%= image_tag avatar_url(current_user) %>
 </div>
 
-<div class="contentBox">
+<div class="profile-content">
 	
 		<%= render @bookmarked_posts %>
 
