--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="teaicon.ico" type="image/x-icon" />
 </head>  
   
 <body>
@@ -24,7 +25,7 @@
       <%= render 'static_cover' %>
       <% else %>
           <%= render 'header' %>
-          <% if params[:name].present? || current_page?("/top_videos") || current_page?("/latest") %>
+          <% if params[:name].present? || current_page?("/top_videos") || current_page?("/latest") || current_page?('/profile') %>
                 <%= render 'short_cover' %>
           <% else %>
                 <%= render 'cover' %>
