--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <% if current_page?('/') or current_page?('/posts') %>
                 <div class="homepage-hero-module">
                   <div class="video-container">
-                      <video autoplay loop class="fillWidth">
+                      <video autoplay loop preload='true' class="fillWidth">
                           <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
                       </video>
                   </div>
