--- a/app/views/application/_cover.html.erb
+++ b/app/views/application/_cover.html.erb
@@ -1,7 +1,13 @@
 <div class="hero-cover">
             <% if current_page?('/') || current_page?('/posts')%>
                 <div class="img-cover"></div>
-                <%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
+                <div class="homepage-hero-module">
+                  <div class="video-container">
+                      <video autoplay loop preload='true' class="fillWidth">
+                          <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                      </video>
+                  </div>
+              </div>
                   <div class="hero-title">
                     <h1><%= @title %> </h1>
                     <h3><%= @slogan %> </h3>
