--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
 </head>  
   
-<body>
+<body onresize="setScale(this)" >
 
     
   <div class="wrapper">
@@ -124,6 +124,8 @@
       </div>
 
   </div>
+
+  $('body').flowtype();
 
 </body>
 </html>
