--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
-<div class="main-container">
-	<div class="buttons">
+<div class="main-container" id="main-container" >
+
+	<div class="buttons group" id="buttons">
 
 				<div class="vote-wrapper button">
 					<%= render 'like', post: post %>
