--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,8 +58,9 @@ body {
   padding: 0;
   font-family:'Roboto';
   font-weight:200;
-  font-size:67.5%
+  font-size:25px;
 }
+
 
 ::-webkit-scrollbar {
   display:none
@@ -67,7 +68,7 @@ body {
 
 .wrapper {
   margin: 0;
-  width:100%
+  width:100%;
 }
 
 .center {
@@ -629,3 +630,8 @@ body {
   width:100%;
   z-index:11
 }
+
+
+
+
+
