--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,9 +41,10 @@ $white: #fff; // white //
 $black: #000; // black //
 $lightgrey: #eee; // lightgrey //
 $grey: #888; // grey //
+$darkgrey: #444; // darkgrey //
 $purple: #8171B6; // purple //
 $lightpurple: #9181C6; // purple //
-$lighterpurple: #E1D1F9; // purple //
+$lighterpurple: #F6E7FF; // purple //
 $yellow: #FFF5AC; // yellow //
 $teal: #00AAA3; // teal //
 $lightteal: #30BAB3; // teal //
@@ -59,7 +60,7 @@ body {
   margin:0;
   padding: 0;
   font-family:'Roboto';
-  font-weight:200;
+  font-weight:300;
   font-size:67.5%
 }
 
@@ -97,7 +98,7 @@ body {
   width:100%;
   height:65px;
   position:fixed;
-  background-color:$purple;
+  background-color:$white;
   // box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
   z-index:8;
   opacity: 0.98;
@@ -125,7 +126,7 @@ body {
               line-height:65px;
               font-weight:500;
               text-decoration:none;
-              color:$white;
+              color:$black;
               padding:20px 30px 15px 40px
             }
       }
@@ -145,6 +146,7 @@ body {
   width:100%;
   font-size: 2.5rem;
   z-index: -1;
+  color:$black;
 }
 
 .tag-wrap {
@@ -152,7 +154,7 @@ body {
 }
 
 .tag-wrap:hover{
-  color:$lighterpurple;
+  color:$darkgrey;
 }
 
 .tags-button {
@@ -164,7 +166,7 @@ body {
   font-size: 1.4rem;
   float: left;
   padding-left:10px;
-  font-weight:200;
+  font-weight:300;
 }
 
 
@@ -185,7 +187,8 @@ body {
       font-size: 1rem;
       margin: 10px 0 0 0;
       padding: 0;
-      font-weight: 200;
+      font-weight: 300;
+      color:$white;
     }
   
   
@@ -231,17 +234,18 @@ body {
   width:200px;
   height:65px;
   line-height: 65px;
-  background-color:$lightpurple;
+  background-color:$lightgrey;
     i {
       margin-top:20px;
       font-size:1.5rem;
       padding-left: 20px;
+      color:$black;
     }
 }
 
 .search-input {
   position: absolute;
-  color:$white;
+  color:$purple;
   padding-left:10px;
   border:none;
   font-family:'Roboto',sans-serif;
@@ -255,7 +259,7 @@ body {
 
 ::-webkit-input-placeholder {
    font-family:'Roboto',sans-serif;
-   color: $white;
+   color: $black;
    font-weight:200;
 }
 
@@ -264,7 +268,7 @@ body {
 }
 
 .search-button:hover{
-  color:$lighterpurple;
+  color:$darkgrey;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -373,7 +377,7 @@ body {
   
       a {
           text-decoration:none;
-          color:$white;
+          color:$black;
           font-size: 1.2rem;
           font-weight: 200;
           padding: 10px;
@@ -381,7 +385,7 @@ body {
         }
 
         &:hover a {
-          color:$lightgrey;
+          color:$darkgrey;
         }
         
     // .contribute-button {
@@ -410,6 +414,7 @@ body {
   float:right;
   padding:10px;
   z-index:13;
+  color:$black;
     
     i {
       font-size:2.4rem;
@@ -418,7 +423,7 @@ body {
 
 
 .extra-button:hover , .current-user:hover , .user-logout:hover , .user-login:hover {
-  color:$lighterpurple
+  color:$darkgrey
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -451,12 +456,13 @@ body {
   padding: 0;
   width:100%;
   height:100%;
-  opacity: 0.7;
+  opacity: 0.4;
   cursor:default;
+  z-index:1;
 }
 
 .img-cover {
-  background-color:$blue;
+  background-color:$black;
 }
 
 .catgeory-img-cover {
@@ -467,6 +473,45 @@ body {
       width:1500px;
       // visibility:hidden;
 }
+
+.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+}
+.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}
+.video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
+.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+}
+.video-container video.fillWidth {
+    width: 100%;
+}
+
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - -  Hero Section  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -483,6 +528,7 @@ body {
   padding: 0;
   top:20%;
   color:$white;
+  z-index: 1;
   
        h1 {
            font-size: 3rem;
@@ -586,7 +632,7 @@ body {
 
 .topvid-button:hover, .mostrecent-button:hover {
   background-color: $white;
-  color: $purple;
+  color: $black;
 }
 
 
@@ -598,8 +644,9 @@ body {
 .sidebar {
   height:100%;
   right:-200px;
+  font-weight:300;
   margin-top:65px;
-  background-color:$teal;
+  background-color:$white;
 
    &:hover {
      overflow-y: auto;
@@ -633,7 +680,7 @@ body {
 
 .new-post {
   text-decoration:none;
-  color:#fff
+  color:$black;
 }
 
 .static-links {
@@ -647,7 +694,7 @@ body {
 
 .static-pages a {
   text-decoration:none;
-  color:#fff
+  color:$black;
 }
 
 [data-sidebar-dimmer] {
