--- a/app/views/application/_cover.html.erb
+++ b/app/views/application/_cover.html.erb
@@ -3,9 +3,7 @@
                 <div class="img-cover"></div>
                 <div class="homepage-hero-module">
                   <div class="video-container">
-                      <video autoplay loop preload='true' class="fillWidth">
-                          <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                      </video>
+                      <video autoplay loop preload='true' muted='true' class="fillWidth" src="assets/bulbs.mp4"></video>
                   </div>
               </div>
                   <div class="hero-title">
