--- a/app/views/posts/_short_cover.html.erb
+++ b/app/views/posts/_short_cover.html.erb
@@ -1,5 +1,5 @@
 <div class="short-hero-cover">
-                <div class="catgeory-img-cover"></div>
+                <div class="category-img-cover"></div>
                 <%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
            <div class="hero-phrase">
            <% if current_page?('/profile') %>
