--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,8 +98,8 @@ body {
   width:100%;
   height:65px;
   position:fixed;
-  background-color:$white;
-  // box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
+  background-color:$purple;
+  box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
   z-index:8;
   opacity: 0.98;
   top: 0;
@@ -126,7 +126,7 @@ body {
               line-height:65px;
               font-weight:500;
               text-decoration:none;
-              color:$black;
+              color:$white;
               padding:20px 30px 15px 40px
             }
       }
@@ -146,7 +146,7 @@ body {
   width:100%;
   font-size: 2.5rem;
   z-index: -1;
-  color:$black;
+  color:$white;
 }
 
 .tag-wrap {
@@ -154,7 +154,7 @@ body {
 }
 
 .tag-wrap:hover{
-  color:$darkgrey;
+  color:$lighterpurple;
 }
 
 .tags-button {
@@ -234,18 +234,18 @@ body {
   width:200px;
   height:65px;
   line-height: 65px;
-  background-color:$lighterpurple;
+  background-color:$lightpurple;
     i {
       margin-top:20px;
       font-size:1.5rem;
       padding-left: 20px;
-      color:$black;
+      color:$white;
     }
 }
 
 .search-input {
   position: absolute;
-  color:$purple;
+  color:$white;
   padding-left:10px;
   border:none;
   font-family:'Roboto',sans-serif;
@@ -259,7 +259,7 @@ body {
 
 ::-webkit-input-placeholder {
    font-family:'Roboto',sans-serif;
-   color: $black;
+   color: $white;
    font-weight:200;
 }
 
@@ -268,7 +268,7 @@ body {
 }
 
 .search-button:hover{
-  color:$darkgrey;
+  color:$white;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -287,7 +287,7 @@ body {
       line-height: 65px;
       margin: 0;
       padding: 10px; 
-      color:$black;
+      color:$white;
       cursor:pointer;
     }
 
@@ -377,7 +377,7 @@ body {
   
       a {
           text-decoration:none;
-          color:$black;
+          color:$white;
           font-size: 1.2rem;
           font-weight: 300;
           padding: 10px;
@@ -385,7 +385,7 @@ body {
         }
 
         &:hover a {
-          color:$darkgrey;
+          color:$lighterpurple;
         }
         
     // .contribute-button {
@@ -414,7 +414,7 @@ body {
   float:right;
   padding:10px;
   z-index:13;
-  color:$black;
+  color:$white;
     
     i {
       font-size:2.4rem;
@@ -423,7 +423,7 @@ body {
 
 
 .extra-button:hover , .current-user:hover , .user-logout:hover , .user-login:hover {
-  color:$darkgrey
+  color:$lighterpurple;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -448,7 +448,7 @@ body {
   overflow:hidden;
 }
 
-.img-cover , .catgeory-img-cover {
+.img-cover , .category-img-cover {
   position: absolute;
   top:0;
   left:0;
@@ -458,14 +458,13 @@ body {
   height:100%;
   opacity: 0.4;
   cursor:default;
-  z-index:1;
 }
 
 .img-cover {
   background-color:$black;
 }
 
-.catgeory-img-cover {
+.category-img-cover {
   background-color:$blue;
 }
 
@@ -478,6 +477,7 @@ body {
     border-right: none;
     border-left: none;
     position: relative;
+    z-index:-1;
 }
 .no-video .video-container video,
 .touch .video-container video {
@@ -646,7 +646,7 @@ body {
   right:-200px;
   font-weight:300;
   margin-top:65px;
-  background-color:$white;
+  background-color:$teal;
 
    &:hover {
      overflow-y: auto;
@@ -680,7 +680,7 @@ body {
 
 .new-post {
   text-decoration:none;
-  color:$black;
+  color:$white;
 }
 
 .static-links {
@@ -694,7 +694,7 @@ body {
 
 .static-pages a {
   text-decoration:none;
-  color:$black;
+  color:$white;
 }
 
 [data-sidebar-dimmer] {
