--- a/app/views/application/_static_cover.html.erb
+++ b/app/views/application/_static_cover.html.erb
@@ -1,6 +1,6 @@
 <div class="hero-cover">
               <%= link_to root_path do %>
-                <div class="img-cover"></div>
+                <div class="blue-img-cover"></div>
                 <%= image_tag('blurred-cover-photo' ,class: 'cover-photo-img') %> 
               <% end %>
 </div>
