--- a/app/views/posts/_panel.html.erb
+++ b/app/views/posts/_panel.html.erb
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container panel-wrapper">
 	<div class="post-container panel-container">
 			<a class="overlay" href="/submit"> 
 				<div class="fader"></div>
