--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -22,13 +22,22 @@
   z-index:3;
   
   .post-description {
-   font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1rem;
+    font-size: 0.88rem;
   }
+  
+  @include breakpoint(small) {
+    .post-description {
+     font-size: 2.2rem;
+    }
 
+    .created-at {
+      font-size: 1.43rem;
+    }
+  }
   @include breakpoint(medium) {
 
     width: 50%;
@@ -47,11 +56,11 @@
   width:100%;
 
   .post-description {
-   font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1.6rem;
+    font-size: 0.88rem;
   }
 
   @include breakpoint(medium) {
@@ -81,11 +90,11 @@
   width:100%;
 
   .post-description {
-   font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1.6rem;
+    font-size: 0.88rem;
   }
 
   @include breakpoint(medium) {
@@ -116,11 +125,11 @@
   width:100%;
 
   .post-description {
-   font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1.6rem;
+    font-size: 0.88rem;
   }
 
   @include breakpoint(medium) {
@@ -152,11 +161,11 @@
   float:right;
 
   .post-description {
-   font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1.6rem;
+    font-size: 0.88rem;
   }
 
   @include breakpoint(medium) {
@@ -184,13 +193,13 @@
 }
 .main-container:nth-child(9n+4) {
   width:100%;
-    .post-description {
-      font-size: 2.6rem;
-    }
+  .post-description {
+   font-size: 1.2rem;
+  }
 
-    .created-at {
-      font-size: 1.6rem;
-    }
+  .created-at {
+    font-size: 0.88rem;
+  }
 
   @include breakpoint(medium) {
     width: 50%;
@@ -219,11 +228,11 @@
   width:100%;
 
   .post-description {
-    font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1.6rem;
+    font-size: 0.88rem;
   }
 
   @include breakpoint(medium) {
@@ -253,12 +262,35 @@
   width:100%;
 
   .post-description {
-    font-size: 2.6rem;
+   font-size: 1.2rem;
   }
 
   .created-at {
-    font-size: 1.6rem;
+    font-size: 0.88rem;
   }
+
+  @include breakpoint(small) {
+    
+    .post-description {
+     font-size: 2.2rem;
+    }
+
+    .created-at {
+      font-size: 1.43rem;
+    }
+  }
+
+  @include breakpoint(medium) {
+
+    .post-description {
+      font-size: 2.6rem;
+    }
+
+    .created-at {
+      font-size: 1.6rem;
+    }
+  }
+
 }
 
 
