--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -3,15 +3,16 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .form {
+
+	width: 80%;
 	background-color: rgba(0,0,0, 0.5);
-	width: 400px;
 	position: absolute;
-	top:200px;
+	top:27%;
 	left:0;
-    	right:0;
-    	margin-left:auto;
-    	margin-right:auto;
-	padding: 20px;
+	right:0;
+	margin-left:auto;
+	margin-right:auto;
+	padding: 10%;
 	-webkit-box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
@@ -21,12 +22,23 @@
 			font-weight: 300;
 			font-size: 1rem;
 		}
+
+	@include breakpoint(small) {
+
+		width: 400px;
+		padding: 20px;
+
+	}
+
 }
 
 .form-title {
 	position: absolute;
-	width: 500px;
-	padding: 20px;
+	width: 80%;
+	padding-bottom: 20px;
+	padding-top:20px;
+	padding-left: 10%;
+	padding-right: 10%;
 	left:0;
    	right:0;
    	margin-left:auto;
@@ -37,7 +49,18 @@
 
 	h1 {
 		font-weight: 300;
-		font-size: 2.5rem;
+		font-size: 2rem;
+	}
+
+	@include breakpoint(small) {
+
+		width: 500px;
+		padding: 20px;
+
+		h1{
+			font-size:2.5rem;
+		}
+
 	}
 }
 
@@ -175,13 +198,13 @@
 
 .signup-form-title {
 	position: absolute;
-	width: 440px;
+	width: 100%;
 	left:0;
-           right:0;
-           margin: 0 auto;
+    right:0;
+    margin: 0 auto;
 	z-index: 9;
 	text-align: center;
-	top: 144px;
+	top: 134px;
 	
 	a {
 		text-decoration:none;
@@ -189,10 +212,18 @@
 		position: absolute;
 		font-weight: 400;
 		font-size: 1.4rem;
-		width: 220px;
+		width: 50%;
 		padding: 15px 0px;
 		background-color: rgba(0,0,0,0.5);
+		
+		@include breakpoint(small) {
+
+		width: 220px;
+
 	}
+
+	}
+
 	.login-a {
 		left: 0;
 	}
@@ -202,6 +233,12 @@
 
 	.selected {
 		background-color:$teal;	
+	}
+
+	@include breakpoint(small) {
+
+		width: 440px;
+
 	}
 }
 
