--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -437,11 +437,16 @@ body {
 
 .hero-cover {
   width:100%;
-  height: 100vh;                // Need to decide on using vh/vw ?????
+  height: 60vh;                // Need to decide on using vh/vw ?????
   margin:0;
   float:left;
   position:relative;
   overflow:hidden;
+
+  @include breakpoint(medium) {
+    height: 100vh;
+  }
+
 }
 
 .short-hero-cover {
@@ -540,18 +545,54 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  top:20%;
+  top:33%;
   color:$white;
   z-index: 1;
   
-       h1 {
-           font-size: 3rem;
+  @include breakpoint(small) {
+      top:15%;
+  }
+
+  @include breakpoint(medium) {
+      top:20%;
+  }
+
+      h1 {
+           font-size: 1.75rem;
            font-weight: 300;
+           padding-right: 5%;
+           padding-left: 5%;
+
+           @include breakpoint(small) {
+              font-size: 3rem;
+              padding-right: 0;
+              padding-left: 0;
+              padding-top: 5%;
+            }
+
+            @include breakpoint(medium) {
+              font-size: 3rem;
+              padding-right: 0;
+              padding-left: 0;
+              padding-top: 0;
+            }
       }
 
       h3 {
-          font-size: 2rem;
+          font-size: 1rem;
           font-weight: 200;
+          padding-right: 2%;
+          padding-left: 2%;
+          padding-top: 5%;
+          display: none;
+
+          @include breakpoint(medium) {
+            font-size: 2rem;
+            padding-right: 0;
+            padding-left: 0;
+            padding-top: 0;
+            display: inline-block;
+          }
       }
 }
 
@@ -567,7 +608,7 @@ body {
   top:35%;
   color:$white;
   
-       h1 {
+      h1 {
            font-size: 3rem;
            font-weight: 200;
       }
@@ -576,12 +617,16 @@ body {
 .hero-buttons{
   position: absolute;
   z-index:7;
-  top:55%;
+  top:70%;
   width: 100%;
+
+  @include breakpoint(medium) {
+    top:55%;
+  }
 }
 
 .topvid-button,.mostrecent-button {
-  font-size:1.5rem;
+  font-size:1.25rem;
   position:relative;
   padding:10px;
   cursor:pointer;
@@ -589,6 +634,10 @@ body {
   color:$white;
   border:2px solid $white;
   border-radius: 3px;
+
+  @include breakpoint(small) {
+    font-size:1.5rem;
+  }
 }
 
 .start-watching {
@@ -603,6 +652,11 @@ body {
   padding: 0;
   top:75%;
   color:$white;
+  display: none;
+
+  @include breakpoint(medium) {
+    display: flex;
+  }
 }
 
 .scroll-to-content {
@@ -617,6 +671,12 @@ body {
   padding: 0;
   top:80%;
   color:$white; 
+  display: none;
+
+  @include breakpoint(medium) {
+    display: block;
+  }
+
 }
 
 .scroll-arrow {
