--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,15 @@
                         TEA is a nearly endless supply of enlightening content. We believe there is no limit knowledge.">
     
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="teaicon.ico" type="image/x-icon" />
 </head>  
   
-<body onresize="setScale(this)" >
+<body>
 
   <div class="wrapper">
   <div class="dimmer area" data-sidebar-dimmer></div>
@@ -35,10 +36,7 @@
     <% end %>
 
     <%= render 'sidebar' %>
-
     
-
-
       
 	<div class="content group">
           <%= yield %>
