--- a/app/assets/stylesheets/_profile.scss
+++ b/app/assets/stylesheets/_profile.scss
@@ -1,5 +1,17 @@
 .profile-header {
 
+	img {
+	    position: absolute;
+	    top: 100px;
+	    left: 0;
+	    width: 100px;
+	    height: 100px;
+	    margin-left: auto;
+	    margin-right: auto;
+	    right: 0;
+	    border-radius: 50%;
+	}
+
 	h4 {
 		position: absolute;
 	    	top: 150px;
@@ -12,16 +24,27 @@
 		font-size: 3rem;
 		font-weight:300;
 		color:white;
+		border-bottom:2px solid white;
+		border-top:2px solid white;
+		
+		
 	}
+	
+	.profile-small-header {
+		position: absolute;
+	    	top: 290px;
+	   	left: 0;
+		margin-left: auto;
+		margin-right: auto;
+		text-align: center;
+		right: 0;
+		color:white;
 
-	img {
-	    position: absolute;
-	    top: 100px;
-	    left: 0;
-	    width: 100px;
-	    margin-left: auto;
-	    margin-right: auto;
-	    right: 0;
-	    border-radius: 50%;
+
+		h5 {
+			font-size: 1.5rem;
+			font-weight:300;
+			margin: 0;
+		}
 	}
 }
