--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,14 +37,14 @@ $red: #FF4955;   // red //
 $darkred: #FF5567; // darker red //
 $lightred: #FFD8E8; // light red//
 $orange: #FFB246;   // orange //
-$white: #fff; // white // 
+$white: #FFF; // white // 
 $black: #000; // black //
-$lightgrey: #eee; // lightgrey //
+$lightgrey: #EEE; // lightgrey //
 $grey: #888; // grey //
 $darkgrey: #444; // darkgrey //
 $purple: #8171B6; // purple //
-$lightpurple: #9181C6; // purple //
-$lighterpurple: #F6E7FF; // purple //
+$lightpurple: #9181C6; // lightpurple //
+$lighterpurple: #F6E7FF; // lighterpurple //
 $yellow: #FFF5AC; // yellow //
 $teal: #00AAA3; // teal //
 $lightteal: #30BAB3; // teal //
@@ -303,6 +303,7 @@ body {
             cursor:pointer;
             display:block;
             height: 40px;
+            width: 40px;
             padding:0; 
             margin: 0;
             border-radius:50%;
