--- a/app/views/application/_static_header.html.erb
+++ b/app/views/application/_static_header.html.erb
@@ -1,31 +1,10 @@
 <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
       <div class="nav-down">
-        <div class="logo"><%= link_to 'TEA.', root_path %></div>
-        
+          <%= render 'logo' %>        
 
-          <div class="extra-button" data-sidebar-button>
-                <i class="fa fa-bars extra-icon"></i>
-          </div>
+          <%= render 'extra' %>
 
-          <div class="login-section">
-            <% if user_signed_in? %>
-                       <div class="current-user">
-                          <%= image_tag avatar_url(current_user) %>
-                        </div>
-                        <div class="user-popup">
-                              <ul>
-                                  <div class="popup-text">
-                                      <li><p>Signed in as</p></li>
-                                      <li><p class="popup-username"><%= current_user.username %></p></li>
-                                  </div>
-                                  <li><%= nav_link_to 'Profile', profile_path %></li>
-                                  <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-                              </ul>
-                        </div>
-              <%else%>
-                    <%= link_to "Sign in / Sign up" , new_user_session_path,  class: 'user-login' %>
-              <% end %>
-          </div>          
+          <%= render 'login' %>        
         
       </div>
     </div>
