--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -1,10 +1,12 @@
 <div class="profile-header">
 	<h4><%= current_user.username %></h4>
-	<%= image_tag avatar_url(current_user) %>
+	<%= gravatar_image_tag(current_user.email.gsub('spam', 'mdeering'), :alt => current_user.username) %>
+	<div class="profile-small-header"><h5> Bookmarked </h5></div>
 </div>
 
 <div class="profile-content">
-	
+		
+
 		<%= render @bookmarked_posts %>
 
 		<%= will_paginate @bookmarked_posts %>
