--- a/app/assets/stylesheets/_profile.scss
+++ b/app/assets/stylesheets/_profile.scss
@@ -2,7 +2,7 @@
 
 	img {
 	    position: absolute;
-	    top: 100px;
+	    top: 15%;
 	    left: 0;
 	    width: 100px;
 	    height: 100px;
@@ -14,7 +14,7 @@
 
 	h4 {
 		position: absolute;
-	    	top: 150px;
+	    	top: 22%;
 	   	left: 0;
 	   	width:300px;
 	   	text-align:center;
@@ -32,7 +32,7 @@
 	
 	.profile-small-header {
 		position: absolute;
-	    	top: 290px;
+	    	top: 43%;
 	   	left: 0;
 		margin-left: auto;
 		margin-right: auto;
@@ -53,7 +53,7 @@
 	
 	h2 {
 		position: absolute;
-	    	top: 400px;
+	    	top: 60%;
 	   	left: 0;
 		margin-left: auto;
 		margin-right: auto;
