--- a/app/assets/stylesheets/_static_pages.scss
+++ b/app/assets/stylesheets/_static_pages.scss
@@ -15,7 +15,7 @@
 
 .about-content, .contact-content, .help-content , .copyright-content {
 	position: absolute;
-	width:600px;
+	width:60%;
 	font-size: 1.25rem;
 	top:15vh;
 	text-align: center;
