changing logo and fixing cover vid

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,7 +2,7 @@
       <div class="nav-down">
           <%= render 'logo' %>
         
-          <%= render 'search' %>
+          <%#= render 'search' %> 
           
           <%= render 'tags' %>
 
