--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,16 +118,12 @@ body {
           margin:0;
           padding:0;
           
-            a {
-               z-index: 6;
-              position:relative;
-              font-size:2rem;
+            img {
+              z-index: 6;
+              position: relative;
               margin: 0;
-              line-height:65px;
-              font-weight:500;
-              text-decoration:none;
-              color:$white;
-              padding:20px 30px 15px 40px
+              height: 50px;
+              padding: 7.5px 15px;
             }
       }
 }
@@ -438,6 +434,7 @@ body {
 
 .hero-cover {
   width:100%;
+  
   height: 60vh;                // Need to decide on using vh/vw ?????
   margin:0;
   float:left;
@@ -514,7 +511,7 @@ body {
     position: relative;
     bottom: 0%;
     left: 0%;
-    height: 100%;
+    // height: 100%;
     width: 100%;
     overflow: hidden;
     background: #000;
