--- a/app/views/application/_logo.html.erb
+++ b/app/views/application/_logo.html.erb
@@ -1,1 +1,5 @@
-<div class="logo"><%= link_to 'TEA.', root_path %></div>
+<div class="logo">
+	<%= link_to root_path do %>
+		<%= image_tag("tea-logo.png") %>
+	<% end %>
+</div>
