--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -6,7 +6,7 @@
 	background-color: rgba(0,0,0, 0.5);
 	width: 400px;
 	position: absolute;
-	top:200px;
+	top: 170px;
 	left:0;
     	right:0;
     	margin-left:auto;
@@ -38,6 +38,7 @@
 	h1 {
 		font-weight: 300;
 		font-size: 2.5rem;
+		margin: 14px 0 14px 0;
 	}
 }
 
@@ -90,10 +91,6 @@
 .post-url-field, .post-article-url-field, .post-description-field {
 }
 
-// .field-error { 
-// 	display: inline-block;
-// 	border: 2px solid red;
-// }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - Category - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -207,8 +204,8 @@
 
 
 
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Sign Up - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .signup-submit {
@@ -216,3 +213,52 @@
 
 .password-field, .email-field , .username-field{
 }
+
+
+
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Errors - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+
+// .error-message {
+// 	position: absolute;
+// 	display: inline-block;
+// 	color: $red;
+// 	right: 200px;
+// 	font-size: 0.8rem;
+// }
+	
+// .url-invalid {
+// 	top: 250px;
+// }
+
+// .url-blank {
+// 	top: 260px;
+// }
+
+// .contribution-invalid {
+// 	top: 600px;
+// }
+
+.error-message {
+	display: inline-block;
+	position: absolute;
+	color: red;
+	font-size: .8rem;
+	text-align: center;
+}
+
+.url-error {
+	border-style: solid;
+	border-width: 2px;
+	border-color: red;
+	background-color: rgba(255,0,0,0.2);
+	height: 30px;
+	width: 150px;
+	top: 230px;
+	right: 200px;
+	padding: 5px;
+}
+
+
