--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -2,31 +2,43 @@
   <h1>Contribute to The Archive!</h1>
 </div>
 
+  <% if @contribution.errors.any? %>
+    <% @contribution.errors.full_messages.each do |message| %>
+
+        <% if message.include? "url" %>
+          <li class="error-message url-error">Your URL is invalid</li>
+        <% elsif %>
+          <li class="error-message tag-error">Your tag is invalid</li>
+        <% end %>
+
+    <% end %>
+  <% end %>
+
 <div class="form">
   <%= form_for(@contribution) do |f| %>
 
-    <div class="field">
-      <%= f.text_field :contribution_url, placeholder: 'Enter the URL here!', class: 'contribution-url-field input' %>
-    </div>
+      <div class="field">
+        <%= f.text_field :contribution_url, placeholder: 'Enter the URL here!', class: 'contribution-url-field input' %>
+      </div>
 
-    <h3>Choose tags from the list below</h3>
+      <h3>Choose tags from the list below</h3>
 
-    <div class="field checkbox-field">
-      <%= f.collection_check_boxes( :category_ids, Category.all, :id, :name)  do |b| %> 
-      <%= b.check_box(class: 'check_box') %>
-      <%= b.label(class: "checkbox_label") %>
-      <% end %>
-    </div>
+      <div class="field checkbox-field">
+        <%= f.collection_check_boxes( :category_ids, Category.all, :id, :name)  do |b| %> 
+        <%= b.check_box(class: 'check_box') %>
+        <%= b.label(class: "checkbox_label") %>
+        <% end %>
+      </div>
 
-    <div class="recommend-wrap"><h3 class="contribute-new-tag">Or, recommend your own tag!</h3></div>
+      <div class="recommend-wrap"><h3 class="contribute-new-tag">Or, recommend your own tag!</h3></div>
 
-    <div class="field">
-      <%= f.text_field :contribution_category, placeholder: 'Enter the tag here!', class: 'contribution-category-field input' %>
-    </div>
+      <div class="field">
+        <%= f.text_field :contribution_category, placeholder: 'Enter the tag here!', class: 'contribution-category-field input' %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit value: 'Submit', class: 'contribution-submit submit' %>
-    </div>
+      <div class="actions">
+        <%= f.submit value: 'Submit', class: 'contribution-submit submit' %>
+      </div>
 
   <% end %>
 </div>
