--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="teaicon.ico" type="image/x-icon" />
+  <link href="/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>  
   
 <body>
