--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -2,6 +2,11 @@
 
         <div class="sidebar-buttons">
             <ul>
+              <%= render 'login' %>         
+        
+              <%= render 'submit' %>  
+            </ul>
+            <ul>
                  <% if current_user.try(:admin?) %>
                       <li><%= link_to 'New Post' , new_post_path , class: 'new-post' %></li>
                       <li><%= link_to 'New Category' , new_category_path , class: 'new-post' %></li>
