--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -462,10 +462,20 @@ iframe {
   width: 5.4%;
   height: 9.82%;
   border-radius: 14%;
-
+  
+  @include breakpoint(medium) {
+  
   &:hover {
     background-color:$purple;
   }
+
+
+  @include ipad(landscape) {
+    &:hover {
+      background-color: rgba(50,50,50,0.8); 
+    }
+  }
+}
 }
 
 .vote-wrapper {
