--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require_self 
  */
 
-
+@import "media-queries";
 @import 'mixins';
 @import 'constants';
 @import 'categories';
@@ -119,7 +119,7 @@ body {
           padding:0;
           
             a {
-               z-index: 6;
+              z-index: 6;
               position:relative;
               font-size:2rem;
               margin: 0;
@@ -127,7 +127,13 @@ body {
               font-weight:500;
               text-decoration:none;
               color:$white;
-              padding:20px 30px 15px 40px
+              padding:20px 15px 15px 10px
+            }
+
+            @include breakpoint(medium) {
+              a {
+                padding:20px 15px 15px 40px
+              }
             }
       }
 }
@@ -167,6 +173,11 @@ body {
   float: left;
   padding-left:10px;
   font-weight:300;
+  display: none;
+
+  @include breakpoint(small) {
+    display: block;
+  } 
 }
 
 
@@ -174,7 +185,8 @@ body {
   display:none;
   position: absolute;
   top:65px;
-  left:35%;
+  left:0;
+  right: 0;
   float: left;
   text-align: center;
   z-index: 5;
@@ -182,6 +194,15 @@ body {
   border-radius:0 0 5px 5px;
   box-shadow: 0px 6px 60px -5px rgba(0,0,0,0.4);
   
+  @include breakpoint(small) {
+    left: 20%;
+    right: 20%;    
+  } 
+
+  @include breakpoint(medium-large) {
+    left: 30%;
+    right: 30%;    
+  } 
 
     h3 {
       font-size: 1rem;
@@ -194,9 +215,12 @@ body {
   
     ul {
       margin: 0 0 10px 0 ;
-      padding: 0 10px 10px 10px;
-      width: 30vw;               // Need to decide on using vh/vw ?????
+      padding: 0 2% 2% 2%;
+      width: 96%;               // Need to decide on using vh/vw ?????
       
+      @include breakpoint(small) {
+
+      } 
       li {
         list-style:none;
         display:inline-block;
@@ -244,7 +268,7 @@ body {
     }
 
   @include breakpoint(medium) {
-    display:block;
+    display:none;
   }
 }
 
@@ -285,6 +309,11 @@ body {
   margin-right: 5px;
   z-index:6;  
   height: 65px;
+  display: none;
+
+  @include breakpoint(small) {
+    display: block;    
+  } 
 
     .user-login {
       text-decoration:none;
@@ -376,10 +405,15 @@ body {
 
 .contribute-section {
   height:65px;
-  float: right;
+  float: left;
   margin-right: 5px;
   line-height: 65px;
   text-align: center;
+  display: none;
+
+  @include breakpoint(small) {
+    display: block;
+  } 
   
       a {
           text-decoration:none;
@@ -415,7 +449,7 @@ body {
   top:0;
   right:0;
   margin-top:2px;
-  margin-right:20px;
+  margin-right:10px;
   cursor:pointer;
   float:right;
   padding:10px;
@@ -425,6 +459,11 @@ body {
     i {
       font-size:2.4rem;
     }
+
+    @include breakpoint(small) {
+      display: block;
+      margin-right: 20px;
+    } 
 }
 
 
@@ -725,6 +764,10 @@ body {
    &:hover {
      overflow-y: auto;
    }
+
+  @include breakpoint(small) {
+    display: block;
+  } 
 }
 
 [data-sidebar] {
@@ -739,6 +782,28 @@ body {
   line-height:20px;
   ul {
     margin:0;
+    
+    .login-section {
+      display: block;
+      
+      
+      @include breakpoint(small) {
+        display: none;
+      } 
+
+    }
+
+    .contribute-section {
+      display: block;
+      
+      @include breakpoint(small) {
+        display: none;
+      } 
+
+    }
+
+    
+
     li {
       margin-top: 20px;
       list-style:none;
@@ -751,6 +816,7 @@ body {
     }
   }
 }
+
 
 .new-post {
   text-decoration:none;
@@ -781,7 +847,6 @@ body {
   width:100%;
   z-index:11
 }
-
 
 
 
