show page, styling, forms shit

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -575,15 +575,44 @@ iframe {
   font-weight:500;
   margin: 0;
   padding:0;
-
 }
 
 .created-at {
   padding:0;
   font-size: 0.5em;
-
 }
 
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+// --------------------------------------------------------- Show Post ------------------------------------------------------------------ //
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+
+.show-main-container {
+  width: 80%;
+  background-color: rgba(0,0,0, 0.5);
+  position: absolute;
+  top:13%;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
+  padding: 0;
+  -webkit-box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
+  cursor: pointer;
+  
+    .show-post-description {
+      font-size: 2rem;
+      line-height: 2rem;
+      margin: 0;
+    }
+
+    .show-created-at {
+      font-size: 1rem;
+      line-height: 1rem;
+      margin: 0;
+    }
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - -  - - - -  Post Panel  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
