--- a/app/views/posts/_share.html.erb
+++ b/app/views/posts/_share.html.erb
@@ -4,9 +4,9 @@
 
 
 <div class="share">
-	<a href="https://www.facebook.com/sharer.php?" title="Share on Facebook" target="_blank" class="btn btn-facebook">
+	<a href="https://www.facebook.com/sharer.php?=https://www.eternalarchive.co.uk/posts/<%= post.id %>" title="Share on Facebook" target="_blank" class="btn btn-facebook">
 	<%= image_tag("F_icon.png")%>
 	
-	<a href="http://twitter.com/home?status=<%= post.url %> " title="Share on Twitter" target="_blank" class="btn btn-twitter">
+	<a href="http://twitter.com/home?status=Check this out! https://www.eternalarchive.co.uk/posts/<%= post.id %>" title="Share on Twitter" target="_blank" class="btn btn-twitter">
 	<%= image_tag("1445737520_square-twitter.png")%>
 </div>
