--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
-<div class="main-container" id="main-container" >
+<div class="main-container">
 
-	<div class="buttons group" id="buttons">
+	<div class="buttons group">
 
 				<div class="vote-wrapper button">
 					<%= render 'like', post: post %>
