--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ $white: #FFF; // white //
 $black: #000; // black //
 $lightgrey: #EEE; // lightgrey //
 $grey: #888; // grey //
-$darkgrey: #444; // darkgrey //
+$darkergrey: #444; // darkgrey //
 $purple: #8171B6; // purple //
 $lightpurple: #9181C6; // lightpurple //
 $lighterpurple: #F6E7FF; // lighterpurple //
