--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -5,6 +5,7 @@
 				<% else %>
 					<%= image_tag("bulb-icon-1005064002.png") %><br>
 				<% end %>
+			<div class="arrow-left"></div>
 	    		<div class="vote-number">
 	    			<%= post.get_upvotes.size %>
 	    		</div>	  		
