--- a/app/views/posts/_share.html.erb
+++ b/app/views/posts/_share.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="share">
-	<a href="https://www.facebook.com/sharer.php?=https://www.eternalarchive.co.uk/posts/<%= post.id %>" title="Share on Facebook" target="_blank" class="btn btn-facebook">
+	<a href="https://www.facebook.com/sharer.php?u=https://www.eternalarchive.co.uk/posts/<%= post.id %>" title="Share on Facebook" target="_blank" class="btn btn-facebook">
 	<%= image_tag("F_icon.png")%>
 	
 	<a href="http://twitter.com/home?status=Check this out! https://www.eternalarchive.co.uk/posts/<%= post.id %>" title="Share on Twitter" target="_blank" class="btn btn-twitter">
