--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -547,7 +547,7 @@ iframe {
     height: 20px;
     line-height: 20px;
     margin: 0;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 .vote-wrapper a {
@@ -648,7 +648,7 @@ iframe {
 // -------------------------------------------------------------------------------------------------------------------------------------------- //
 
 .show-main-container {
-  width: 80%;
+  width: 100%;
   background-color: rgba(0,0,0, 0.5);
   position: absolute;
   top:13%;
@@ -662,17 +662,33 @@ iframe {
   box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
   cursor: pointer;
   
-    .show-post-description {
-      font-size: 2rem;
-      line-height: 2rem;
+   .show-post-description {
+      font-size: 1.5rem;
+      line-height: 1.5rem;
       margin: 0;
     }
 
     .show-created-at {
-      font-size: 1rem;
-      line-height: 1rem;
+      font-size: 0.75rem;
+      line-height: 0.75rem;
       margin: 0;
     }
+  
+      @include breakpoint(small) {
+          width: 80%;
+          
+           .show-post-description {
+              font-size: 2rem;
+              line-height: 2rem;
+              margin: 0;
+            }
+
+            .show-created-at {
+              font-size: 1rem;
+              line-height: 1rem;
+              margin: 0;
+            }   
+   }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - -  - - - -  Post Panel  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
