--- a/app/assets/stylesheets/_flash_messages.scss
+++ b/app/assets/stylesheets/_flash_messages.scss
@@ -13,7 +13,7 @@
 }
 
 .flash-cont {
-    background-color: rgba(0,170,163,0.5);
+    background-color: rgba(126,111,178, 0.9);
     position: absolute;
     top: 65px;
     width: 50%;
@@ -23,6 +23,7 @@
     margin-right: auto;
     z-index: 1;
     text-align: center;
+    border-radius: 0 0 10px 10px;
 }
 
 
