--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -771,9 +771,6 @@ body {
   }
 }
 
-
-
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - -  Contribute  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -794,36 +791,22 @@ body {
     margin-bottom: 0;
   } 
   
-      a {
-          text-decoration:none;
-          color:$white;
-          font-size: 1.2rem;
-          font-weight: 300;
-          padding: 0px;
-          cursor:pointer;
+  a {
+      text-decoration:none;
+      color:$white;
+      font-size: 1.2rem;
+      font-weight: 300;
+      padding: 0px;
+      cursor:pointer;
 
-          @include breakpoint(small) {
-            padding: 10px;
+      @include breakpoint(small) {
+        padding: 10px;
 
-            &:hover a {
-              color:$lighterpurple;
-            }
-          } 
+        &:hover  {
+          color:$lighterpurple;
         }
-
-        &:hover a {
-          font-weight:500;
-        }
-        
-    // .contribute-button {
-    //   margin-top: 12px;
-    //   color:$white;
-    //   font-size: 2.5rem;
-      
-    //         &:hover {
-    //           color:$lighterpurple;
-    //         }
-    //   }
+      } 
+    }
 }  
 
 
